@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-07T08:00:54Z",
+  "timestamp" : "2024-01-07T16:00:41Z",
   "count_outdated" : 63,
   "uniques_outdated" : 47,
-  "count" : 67,
-  "uniques" : 50,
+  "count" : 70,
+  "uniques" : 53,
   "clones" : [
     {
       "timestamp": "2023-12-25T00:00:00Z",
@@ -31,6 +31,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-07T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
