@@ -1,6 +1,6 @@
 {
-  "count": 4,
-  "uniques": 3,
+  "count": 7,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2023-12-25T00:00:00Z",
@@ -16,6 +16,11 @@
       "timestamp": "2024-01-04T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2024-01-07T00:00:00Z",
+      "count": 3,
+      "uniques": 3
     }
   ]
 }
